[gd_scene load_steps=40 format=3 uid="uid://dr8jo16bdxcyf"]

[ext_resource type="Script" uid="uid://bnwtcar8gxve7" path="res://script/enemy.gd" id="1_ocnky"]
[ext_resource type="Texture2D" uid="uid://bo0gwcycdiuxg" path="res://art/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Attack2.png" id="2_tod1u"]
[ext_resource type="Texture2D" uid="uid://btyo72utafj6m" path="res://art/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Idle.png" id="3_jx5fs"]
[ext_resource type="Texture2D" uid="uid://lwurpsd42d3g" path="res://art/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Death.png" id="3_lno5f"]
[ext_resource type="Texture2D" uid="uid://dxfq2wmtm4oe4" path="res://art/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Run.png" id="4_apax3"]
[ext_resource type="PackedScene" path="res://componentes/health_component.tscn" id="5_iqlip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oiewk"]
atlas = ExtResource("2_tod1u")
region = Rect2(2, 24, 118, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev3pp"]
atlas = ExtResource("2_tod1u")
region = Rect2(121, 24, 118, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nodj"]
atlas = ExtResource("2_tod1u")
region = Rect2(240, 24, 118, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_w463i"]
atlas = ExtResource("2_tod1u")
region = Rect2(359, 24, 118, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqs3w"]
atlas = ExtResource("2_tod1u")
region = Rect2(478, 24, 118, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikdh8"]
atlas = ExtResource("2_tod1u")
region = Rect2(597, 24, 118, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5e4m"]
atlas = ExtResource("3_lno5f")
region = Rect2(0, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3w2y"]
atlas = ExtResource("3_lno5f")
region = Rect2(116, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hy0t"]
atlas = ExtResource("3_lno5f")
region = Rect2(232, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y27m"]
atlas = ExtResource("3_lno5f")
region = Rect2(348, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga547"]
atlas = ExtResource("3_lno5f")
region = Rect2(464, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpqwp"]
atlas = ExtResource("3_lno5f")
region = Rect2(580, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_agu4g"]
atlas = ExtResource("3_lno5f")
region = Rect2(696, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_53bnx"]
atlas = ExtResource("3_lno5f")
region = Rect2(812, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7vok"]
atlas = ExtResource("3_lno5f")
region = Rect2(928, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4k5r"]
atlas = ExtResource("3_lno5f")
region = Rect2(1044, 0, 116, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2efm"]
atlas = ExtResource("3_jx5fs")
region = Rect2(2, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdkhp"]
atlas = ExtResource("3_jx5fs")
region = Rect2(121, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iewbv"]
atlas = ExtResource("3_jx5fs")
region = Rect2(240, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv0dm"]
atlas = ExtResource("3_jx5fs")
region = Rect2(359, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_thsia"]
atlas = ExtResource("3_jx5fs")
region = Rect2(478, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bjnb"]
atlas = ExtResource("3_jx5fs")
region = Rect2(597, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp37q"]
atlas = ExtResource("4_apax3")
region = Rect2(240, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb35p"]
atlas = ExtResource("4_apax3")
region = Rect2(359, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wki5g"]
atlas = ExtResource("4_apax3")
region = Rect2(478, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvwj3"]
atlas = ExtResource("4_apax3")
region = Rect2(597, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_313og"]
atlas = ExtResource("4_apax3")
region = Rect2(716, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_758mq"]
atlas = ExtResource("4_apax3")
region = Rect2(835, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3p4e"]
atlas = ExtResource("4_apax3")
region = Rect2(954, 0, 118, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p4ho"]
atlas = ExtResource("4_apax3")
region = Rect2(1073, 0, 118, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_r8nv7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiewk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev3pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nodj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w463i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqs3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdh8")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5e4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3w2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hy0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y27m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga547")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpqwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agu4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53bnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7vok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4k5r")
}],
"loop": true,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2efm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdkhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iewbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv0dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thsia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bjnb")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp37q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb35p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wki5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_313og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_758mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3p4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p4ho")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i1m3p"]
radius = 22.0227

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lw3w"]
size = Vector2(54, 20)

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(23, -30)
script = ExtResource("1_ocnky")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-10, -37)
scale = Vector2(1.51695, 2.04114)
sprite_frames = SubResource("SpriteFrames_r8nv7")
animation = &"dead"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_i1m3p")

[node name="AreaAttack" type="Area2D" parent="."]
position = Vector2(-1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
shape = SubResource("RectangleShape2D_1lw3w")
debug_color = Color(0.930933, 0.229629, 0.333827, 0.42)

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("progress_bar") instance=ExtResource("5_iqlip")]
progress_bar = NodePath("../../ProgressBar")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -48.0
offset_top = -73.0
offset_right = 52.0
offset_bottom = -64.0
value = 100.0
show_percentage = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_area_attack_body_exited"]
